# SunbYteCore

./: .gitignore  CMakeLists.txt  aarch64_toolchain.cross  build_final_sources.sh  build_sources.sh  checkExist.sh  client  core  grey.out  mod_comms  mod_sensors  mod_speedtest  mod_tracking  movemotors.sh  moveset.motors  tmp
modules/: camera_primary.cmake  client.cmake  comms.cmake  core.cmake  odroid.cmake  rpi.cmake  sensors.cmake  speedtest.cmake  test.cmake  tracking.cmake  unit_tests.cmake
modules/camera_primary/: main.cpp  main.h
modules/client/: client.cpp  client.h  downlink.cpp  run.cpp
modules/comms/: main.cpp
modules/core/: README.md  external.cpp  external.h  external_i2c.cpp  external_i2c.h  generics.h  global.h  internal.cpp  internal.h  main.cpp  master.h  messages.cpp  messages.h  server.cpp  server.h  settings.cpp  settings.h
modules/odroid/: odroid_server.cpp  odroid_server.h
modules/rpi/: rpi_server.cpp  rpi_server.h
modules/sensors/: bno055.cpp  bno055.h  i2c.c  i2c_bno055.cpp  ina219.cc  sensors.cpp  sensors.h
modules/speedtest/: main.cpp  test.py
modules/test/: a.out  testdeque.cpp  testsmart.cpp  teststring.cpp
modules/tracking/: drv8711.cpp  drv8711.h  gpioDrivers.cpp  gpioDrivers.h  main.cpp  main.hpp  motorDrive_UDP.h  oldreg  polouo_driver_copy  simpleNET.h
modules/unit_tests/: cerealTest.cpp  stressServer.cpp  testBreak.cpp  test_thread.cpp  unitMotors.cpp  unitSensors.cpp  unitSettings.cpp
